# spider

./: .gitignore  .gitmodules  cabal.project  flake.nix  sockets.py
.github/workflows/: nix.yml
ac/: CHANGELOG.md  LICENSE  ac.cabal
ac/.juspay/ac/: AmountCheck.json
ac/src/AC/: AmountCheck.hs  Constants.hs  Types.hs
ac/test/: Main.hs  Test1.hs  Test2.hs
api-contract/: .gitignore  CHANGELOG.md  api-contract.cabal
api-contract/.juspay/api-contract/test/: Main.hs.yaml
api-contract/src/ApiContract/: Plugin.hs  Types.hs
api-contract/test/: Main.hs
aura/: CHANGELOG.md  aura.cabal  icplugin.cabal
aura/src/Aura/: ConfigPlugin.hs  EnvPlugin.hs
aura/test/: Extra.hs  Main.hs
caseExtract/: CHANGELOG.md  LICENSE  Main_conditionals.json  caseExtract.cabal
caseExtract/src/CaseExtract/: Plugin.hs
caseExtract/test/: Main.hs
coresyn2chart/: .gitignore  CHANGELOG.md  coresyn2chart.cabal  docker-compose.yml
coresyn2chart/.github/workflows/: haskell.yml
coresyn2chart/app/: Main.hs
coresyn2chart/src/Neo4j/: Helpers.hs
coresyn2chart/src/Syn2Chart/: Helpers.hs  Plugin.hs  Traversal.hs  Types.hs
coresyn2chart/test/: Main.hs
dc/: CHANGELOG.md  LICENSE  dc.cabal
dc/.juspay/: domainConfig.yaml
dc/.juspay/dc/test/: Main.hs.json  Sample.hs.err.json  Sample.hs.json  TestCases.hs.err.json  TestCases.hs.json
dc/.juspay/dc/test/IgnorePath/: IgnoreModule.hs.err.json  IgnoreModule.hs.json
dc/.juspay/dc/test/PathsToConsider/: Considered.hs.err.json  Considered.hs.json  ConsideredTests.hs.err.json  ConsideredTests.hs.json
dc/.juspay/dc/test/test/: Main.hs.json  Sample.hs.err.json  Sample.hs.json
dc/src/DC/: Constants.hs  DefaultCheck.hs  Types.hs
dc/test/: Main.hs  RestrictedFuncs.hs  Sample.hs  TestCases.hs
dc/test/IgnorePath/: IgnoreModule.hs
dc/test/PathsToConsider/: Considered.hs  ConsideredTests.hs
endpoints/: CHANGELOG.md  README  endpoints.cabal
endpoints/src/Endpoints/: Plugin.hs
endpoints/test/: Main.hs
fdep/: fdep.cabal  fdep_merge.py
fdep/src/Fdep/: Group.hs  Plugin.hs  PostgreSQL.hs  Types.hs
fdep/test/: Main.hs
fieldInspector/: .gitignore  CHANGELOG.md  README.MD  fieldInspector.cabal
fieldInspector/app/: Main.hs
fieldInspector/src/FieldInspector/: Group.hs  Plugin.hs  PluginFields.hs  PluginTypes.hs  PluginTypesPlain.hs  Types.hs
fieldInspector/test/: Main.hs
ghc-patches/: desugar_plugin_support.patch
keyLookupTracker/: CHANGELOG.md  DOC.md  LICENSE  README.MD  keyLookupTracker.cabal  lookupFinder.cabal
keyLookupTracker/src/KeyLookupTracker/: Plugin.hs  Types.hs
keyLookupTracker/test/: Main.hs
logerr/: logerr.cabal
logerr/src/Logerr/: Plugin.hs  Types.hs
paymentFlow/: CHANGELOG.md  DOC.md  README.MD  paymentFlow.cabal
paymentFlow/.juspay/: paymentFlowRules.yaml
paymentFlow/src/PaymentFlow/: Patterns.hs  Plugin.hs  Types.hs
paymentFlow/test/: Main.hs  Types.hs  Types1.hs
sheriff/: .gitignore  CHANGELOG.md  DOC.md  InfiniteRecursionPatterns.md  README.MD  sheriff.cabal
sheriff/.juspay/: indexedKeys.yaml  queryFunctions.yaml  sheriffExceptionRules.yaml  sheriffRules.yaml
sheriff/src/Sheriff/: CommonTypes.hs  Patterns.hs  Plugin.hs  Rules.hs  Types.hs  TypesUtils.hs  Utils.hs
sheriff/test/: Exceptions.hs  Main.hs  Test1.hs  Test2.hs  TestUtils.hs
sheriff/test/SubTest/: DBRuleTest.hs  Test1.hs
sheriff/test/SubTests/: FunctionUseTest.hs  InfiniteRecursionTest.hs  LogTest.hs  ShowTest.hs
socket_lib/: CHANGELOG.md  LICENSE  socket-lib.cabal
socket_lib/src/: Socket.hs
unusedFieldChecker/: CHANGELOG.md  LICENSE  README.md  UnusedFieldChecker.yaml.example  unusedFieldChecker.cabal
unusedFieldChecker/.juspay/unusedFieldChecker/: AccessPatterns.unusedFields.json  FailingTypes.unusedFields.json
unusedFieldChecker/src/UnusedFieldChecker/: Config.hs  DefinitionExtractor.hs  FieldChecker.hs  LibraryFilter.hs  Plugin.hs  ServantAPI.hs  Types.hs  UsageExtractor.hs  Validator.hs
unusedFieldChecker/test/: AccessPatterns.hs  EdgeCases.hs  FailingTypes.hs  Main.hs
variable-trace/: CHANGELOG.md  LICENSE  variable-trace.cabal
variable-trace/src/Variable/: Trace.hs
variable-trace/test/: Main.hs  Sample.hs
warner/: CHANGELOG.md  LICENSE  warner.cabal
warner/.juspay/existing-errors/test/: Main.hs.json
warner/src/Warner/: Plugin.hs
warner/test/: Main.hs
