cabal-version:      3.0
name:               coresyn2chart
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             eswar2001
maintainer:         teswar2001@gmail.com
-- copyright:
category:           plugin
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-options
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
        -O2

    default-language:    Haskell2010
    default-extensions:
        DeriveGeneric
        GeneralizedNewtypeDeriving
        InstanceSigs
        LambdaCase
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TypeApplications
    build-depends:
        bytestring
        , containers
        , filepath
        , ghc
        , ghc-exactprint
        , unordered-containers
        , aeson
        , directory
        , extra
        , aeson-pretty
        , base
        , text
        , base64-bytestring
        , optparse-applicative
        , deepseq
        , time
        , async
        , cryptonite
        , hasbolt
        , universum
        , data-default
        , streamly

library
    import:           common-options
    exposed-modules:  Syn2Chart.Plugin, Syn2Chart.Types, Syn2Chart.Traversal,Neo4j.Helpers,Syn2Chart.Helpers
    hs-source-dirs:   src
    default-language: Haskell2010

executable coresyn2chart
    import:           common-options
    main-is:          Main.hs
    ghc-options: -threaded -rtsopts
    build-depends:
        coresyn2chart

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite coresyn2chart-test
    import:           common-options
    default-language: Haskell2010
    ghc-options: -fplugin=Syn2Chart.Plugin -fplugin-opt Syn2Chart.Plugin:./tmp/coresyn2chart/
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends: coresyn2chart
