cabal-version:      3.0
name:               fdep
version:            0.1.0.0
synopsis:
    A plugin to dump out function dependancy graph of whole package
license:            MIT
license-file:       LICENSE
author:             eswar2001
maintainer:         teswar2001@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-options
  build-depends:       base
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications

library
    import: common-options
    exposed-modules:  Fdep.Plugin Fdep.Types
    build-depends:
                bytestring
                , containers
                , filepath
                , ghc
                , unordered-containers
                , uniplate
                , references
                , classyplate
                , aeson
                , extra
                , time
                , text
                , socket-lib
                , directory
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite fdep-test
    import:           common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        fdep
        , text
        , record-hasfield
    ghc-options: -fplugin=Fdep.Plugin -fplugin-opt=Fdep.Plugin:{"path":"./tmp/fdep/","port":9898,"host":"localhost","log":true,"tc_funcs":false}
