cabal-version:      3.0
name:               keyLookupTracker
version:            0.1.0.0
synopsis:           A type checker plugin to Tracks key lookups.
license:            MIT
license-file:       LICENSE
author:             harshith.ak-juspay
maintainer:         harshith.ak@juspay.in
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Flag Dev
  Description: Use ghc options to dump ASTs in dev mode
  Default:     False
  Manual:      True

common common-options
  build-depends:       base
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-patterns
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       CPP

library
    import:              common-options
    exposed-modules:    
       KeyLookupTracker.Plugin
    other-modules:
       KeyLookupTracker.Types
    build-depends:
                bytestring
                , containers
                , filepath
                , ghc
                , ghc-exactprint
                , unordered-containers
                , uniplate
                , references
                , classyplate
                , aeson
                , directory
                , extra
                , yaml
                , text
                , aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite keyLookupTracker-test
    import:           common-options

    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs
    other-modules:

    build-depends:
        , keyLookupTracker
        , aeson
        , text
        , containers
        , bytestring
        , aeson-pretty
        , extra
        , record-dot-preprocessor
        , record-hasfield
        , lens >= 4.0
        , unordered-containers
    if flag(Dev)
        ghc-options: 
            -fplugin=KeyLookupTracker.Plugin -fplugin-opt=KeyLookupTracker.Plugin:{"rulesConfigPath":".juspay/keyLookupTrackerRules.yaml"}
    else
        ghc-options: 
    
    default-extensions: DataKinds