cabal-version:      3.0
name:               paymentFlow
version:            0.1.0.0
synopsis:           A checker plugin to throw compilation errors based on given rules.
license:            MIT
license-file:       LICENSE
author:             harshith.ak-juspay
maintainer:         harshith.ak@juspay.in
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Flag Dev
  Description: Use ghc options to dump ASTs in dev mode
  Default:     False
  Manual:      True

common common-options
  build-depends:       base
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-patterns
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       CPP

library
    import:              common-options
    exposed-modules:    
        PaymentFlow.Plugin
    other-modules: 
        PaymentFlow.Types
        PaymentFlow.Patterns
    build-depends:
                bytestring
                , containers
                , filepath
                , ghc
                , ghc-exactprint
                , unordered-containers
                , uniplate
                , references
                , classyplate
                , aeson
                , directory
                , extra
                , yaml
                , text
                , aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite paymentFlow-test
    import:           common-options

    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs
    other-modules:
        Types
        Types1

    build-depends:
        , paymentFlow
        , aeson
        , text
        , containers
        , bytestring
        , aeson-pretty
        , extra
        , record-dot-preprocessor
        , record-hasfield
        , lens >= 4.0
    if flag(Dev)
        ghc-options: 
            -fplugin=PaymentFlow.Plugin 
            -fplugin-opt=PaymentFlow.Plugin:{"rulesConfigPath":".juspay/paymentFlowRules.yaml","failOnFileNotFound":true}
    else
        ghc-options: 
            -fplugin=PaymentFlow.Plugin
    
    default-extensions: DataKinds