cabal-version:      3.0
name:               sheriff
version:            0.1.0.0
synopsis:           A plugin to throw compilation errors based on given rules
license:            MIT
license-file:       LICENSE
author:             piyushgarg-juspay
maintainer:         piyushgarg1906@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Flag Dev
  Description: Use ghc options to dump ASTs in dev mode
  Default:     False
  Manual:      True

common common-options
  build-depends:       base ^>=4.14.3.0
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications

library
    import:              common-options
    exposed-modules:    
        Sheriff.Plugin
    other-modules: 
        Sheriff.Types
        Sheriff.Rules
    build-depends:
                bytestring
                , containers
                , filepath
                , ghc ^>= 8.10.7
                , ghc-exactprint
                , unordered-containers
                , uniplate >= 1.6  && < 1.7
                , references
                , classyplate
                , aeson
                , directory
                , extra
                , yaml
                , aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite sheriff-test
    import:           common-options

    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs
    other-modules:
        Test1

    build-depends:
        , sheriff
        , aeson
        , text
        , containers
        , bytestring
        , aeson-pretty
        , extra

    if flag(Dev)
        ghc-options: 
            -- Plugin options order: {"throwCompilationError":true,"saveToFile":true,"savePath":".juspay/tmp/sheriff/","indexedKeysPath":".juspay/tmp"}
            -fplugin=Sheriff.Plugin 
            -fplugin-opt=Sheriff.Plugin:{"throwCompilationError":true,"saveToFile":true,"savePath":".juspay/tmp/sheriff/","indexedKeysPath":".juspay/indexedKeys.yaml","failOnFileNotFound":true}
            -dumpdir=.juspay/tmp/sheriff/ -ddump-to-file -ddump-parsed-ast -ddump-tc-ast
    else
        ghc-options: 
            -fplugin=Sheriff.Plugin
