cabal-version:      3.0
name:               sheriff
version:            0.2.1.3
synopsis:           A checker plugin to throw compilation errors based on given rules; basically what a `Sheriff` does
license:            MIT
license-file:       LICENSE
author:             piyushgarg-juspay
maintainer:         piyushgarg1906@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Flag SheriffDev
  Description: Use ghc options to dump ASTs in dev mode
  Default:     False
  Manual:      True

common common-options
  build-depends:       base
  ghc-options:         -Werror
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-patterns
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       CPP
library
    import:              common-options
    exposed-modules:    
        Sheriff.Plugin
    other-modules: 
        Sheriff.CommonTypes
        Sheriff.Patterns
        Sheriff.Rules
        Sheriff.Types
        Sheriff.TypesUtils
        Sheriff.Utils
    build-depends:
        bytestring
        , containers
        , filepath
        , ghc
        , ghc-exactprint
        , hashable
        , unordered-containers
        , uniplate
        , references
        , classyplate
        , aeson
        , directory
        , mtl
        , extra
        , yaml
        , text
        , aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010
    if flag(SheriffDev)
        cpp-options: -DSheriffDev

common test-common-options
    import:           common-options  
    default-language: Haskell2010
    hs-source-dirs:   test
    other-modules:
        TestUtils
        Exceptions
    build-depends:
          sheriff
        , aeson
        , text
        , containers
        , bytestring
        , aeson-pretty
        , extra
    if flag(SheriffDev)
        ghc-options: 
            -- Plugin Options available (default values)
            -- {"saveToFile":false,"throwCompilationError":true,"failOnFileNotFound":true,"matchAllInsideAnd":false",savePath":".juspay/tmp/sheriff/","indexedKeysPath":".juspay/indexedKeys.yaml","rulesConfigPath":".juspay/sheriffRules.yaml","exceptionsConfigPath":".juspay/sheriffExceptionRules.yaml","logDebugInfo":false,"logWarnInfo":true,"logTypeDebugging":false,"useIOForSourceCode":false}
            -fkeep-going
            -fplugin=Sheriff.Plugin 
            -fplugin-opt=Sheriff.Plugin:{"throwCompilationError":true,"saveToFile":true,"savePath":".juspay/tmp/sheriff/","indexedKeysPath":".juspay/indexedKeys.yaml","failOnFileNotFound":true,"matchAllInsideAnd":true,"logDebugInfo":false,"logTypeDebugging":false,"useIOForSourceCode":true}
            -dumpdir=.juspay/tmp/sheriff/ -ddump-to-file -ddump-parsed-ast -ddump-tc-ast
    else
        ghc-options: 
            -fkeep-going
            -fplugin=Sheriff.Plugin

test-suite sheriff-test
    import:           test-common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        SubTests.FunctionUseTest
        SubTests.InfiniteRecursionTest
        SubTests.LogTest
        SubTests.ShowTest
        Test1
    
test-suite sheriff-show-test
    import:           test-common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    SubTests.ShowTest
        
test-suite sheriff-log-test
    import:           test-common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    SubTests.LogTest
    
test-suite sheriff-function-use-test
    import:           test-common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    SubTests.FunctionUseTest
    
test-suite sheriff-infinite-recursion-test
    import:           test-common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    SubTests.InfiniteRecursionTest