cabal-version:      3.0
name:               sheriff
version:            0.2.0.4
synopsis:           A checker plugin to throw compilation errors based on given rules; basically what a `Sheriff` does
license:            MIT
license-file:       LICENSE
author:             piyushgarg-juspay
maintainer:         piyushgarg1906@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Flag Dev
  Description: Use ghc options to dump ASTs in dev mode
  Default:     False
  Manual:      True

common common-options
  build-depends:       base
  ghc-options:         -Werror
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-patterns
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       CPP
library
    import:              common-options
    exposed-modules:    
        Sheriff.Plugin
    other-modules: 
        Sheriff.Types
        Sheriff.Rules
        Sheriff.Utils
        Sheriff.Patterns
    build-depends:
          bytestring
        , containers
        , filepath
        , ghc
        , ghc-exactprint
        , unordered-containers
        , uniplate
        , references
        , classyplate
        , aeson
        , directory
        , extra
        , yaml
        , text
        , aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite sheriff-test
    import:           common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        SubTest.Test1
        Test1
        TestUtils
    build-depends:
          sheriff
        , aeson
        , text
        , containers
        , bytestring
        , aeson-pretty
        , extra

    if flag(Dev)
        ghc-options: 
            -- Plugin Options available (default values)
            -- {"saveToFile":false,"throwCompilationError":true,"failOnFileNotFound":true,"matchAllInsideAnd":false",savePath":".juspay/tmp/sheriff/","indexedKeysPath":".juspay/indexedKeys.yaml","rulesConfigPath":".juspay/sheriffRules.yaml","exceptionsConfigPath":".juspay/sheriffExceptionRules.yaml","logDebugInfo":false,"logWarnInfo":true,"logTypeDebugging":false,"useIOForSourceCode":false}
            -fplugin=Sheriff.Plugin 
            -fplugin-opt=Sheriff.Plugin:{"throwCompilationError":true,"saveToFile":true,"savePath":".juspay/tmp/sheriff/","indexedKeysPath":".juspay/indexedKeys.yaml","failOnFileNotFound":true,"matchAllInsideAnd":true,"logDebugInfo":false,"logTypeDebugging":false,"useIOForSourceCode":true}
            -dumpdir=.juspay/tmp/sheriff/ -ddump-to-file -ddump-parsed-ast -ddump-tc-ast
    else
        ghc-options: 
            -fplugin=Sheriff.Plugin

test-suite sheriff-db-rule-test
    import:           common-options
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    SubTest.DBRuleTest
    build-depends:
          sheriff
        , aeson
        , text
        , containers
        , bytestring
        , aeson-pretty
        , extra

    if flag(Dev)
        ghc-options: 
            -fplugin=Sheriff.Plugin 
            -fplugin-opt=Sheriff.Plugin:{"throwCompilationError":true,"saveToFile":true,"savePath":".juspay/tmp/sheriff/","indexedKeysPath":".juspay/indexedKeys.yaml","failOnFileNotFound":true,"matchAllInsideAnd":true,"logDebugInfo":false,"logTypeDebugging":false,"useIOForSourceCode":true}
            -dumpdir=.juspay/tmp/sheriff/ -ddump-to-file -ddump-parsed-ast -ddump-tc-ast
    else
        ghc-options: 
            -fplugin=Sheriff.Plugin