cabal-version:      2.4
name:               unusedFieldChecker
version:            0.1.0.0
license:            MIT
author:             Juspay
maintainer:         juspay
category:           Development
build-type:         Simple

library
  exposed-modules:
      UnusedFieldChecker.Plugin
      UnusedFieldChecker.Types
      UnusedFieldChecker.Validator
      UnusedFieldChecker.Config
      UnusedFieldChecker.DefinitionExtractor
      UnusedFieldChecker.LibraryFilter
      UnusedFieldChecker.UsageExtractor
  build-depends:
      base >=4.7 && <5,
      ghc >=8.8 && <9.11,
      aeson,
      text,
      containers,
      bytestring,
      directory,
      filepath,
      aeson-pretty,
      extra,
      binary,
      deepseq,
      socket-lib,
      yaml
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
      -Wall
      -Wno-orphans
      -Wno-unused-imports
      -Wno-unused-top-binds

test-suite unusedFieldChecker-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base >=4.7 && <5,
        unusedFieldChecker,
        lens,
        generic-lens,
        syb,
        template-haskell
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      
        -threaded 
        -rtsopts 
        -with-rtsopts=-N
        -fplugin=UnusedFieldChecker.Plugin
        -fplugin-opt=UnusedFieldChecker.Plugin:{"path":"./tmp/unusedFieldChecker/","port":4446,"host":"::1","log":true,"exclusionConfigFile":"UnusedFieldChecker.yaml"}
