cabal-version:      2.4
name:               unusedFieldChecker
version:            0.1.0.0
license:            MIT
author:             Juspay
maintainer:         juspay
category:           Development
build-type:         Simple

library
  exposed-modules:
      UnusedFieldChecker.Plugin
      UnusedFieldChecker.Types
      UnusedFieldChecker.Validator
      UnusedFieldChecker.DefinitionExtractor
      UnusedFieldChecker.LibraryFilter
      UnusedFieldChecker.UsageExtractor
      UnusedFieldChecker.FieldChecker
  build-depends:
      base >=4.7 && <5,
      ghc >=8.8 && <9.11,
      aeson,
      text,
      containers,
      bytestring,
      directory,
      filepath,
      aeson-pretty,
      extra,
      binary,
      deepseq,
      socket-lib,
      time,
      filelock,
      ghc-tcplugins-extra,
      syb
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
      -Wall
      -Wno-orphans
      -Wno-unused-imports
      -Wno-unused-top-binds

test-suite unusedFieldChecker-test-fail
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
      FailingTypes
      AccessPatterns
      EdgeCases
  build-depends:
      base >=4.7 && <5,
      unusedFieldChecker
  default-language: Haskell2010
  ghc-options:
      -fplugin=UnusedFieldChecker.Plugin
      -fplugin-opt=UnusedFieldChecker.Plugin:{"failOnUnused":true}
